ingress-certmanager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: echoserver
  name: echoserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: echoserver
    spec:
      containers:
      - image: ealen/echo-server:latest
        name: echoserver
        resources:
          limits:
            cpu: '100m'
            memory: '100Mi'
        securityContext:
          runAsUser: 65534
status: {}
